--- a/index.html
+++ b/index.html
@@ -83,6 +83,42 @@
         </div>
 
         <br>
+        <br>
+
+    	<h3>Publications</h3> 
+        <hr>
+		
+        <div class="paper">
+	        <div class="media">
+            <span class="pull-left"><img src="./paper/3d_inpainting/img/teaser.jpg" width="150px" height="93px"/></span>
+            <div class="media-body">
+                <p><span style="font-weight: bold">Complete 3D Human Reconstruction from a Single Incomplete Image</span></p>
+                <p style="font-size:14px;">Junying Wang, 
+                <span class="author-block">
+              		<a href="https://gorokee.github.io/jsyoon/">Jae Shin Yoon</a>,</span>
+            	<span class="author-block">
+            		<a href="https://tuanfeng.github.io/">Tuanfeng Y. Wang</a>,
+            	</span>
+            	<span class="author-block">
+              		<a href="https://krsingh.cs.ucdavis.edu/">Krishna Kumar Singh</a>,
+            	</span>
+            	<span class="author-block">
+              		<a href="https://cgit.usc.edu/contact/ulrich-neumann/">Ulrich Neumannn</a>
+            	</span>
+             	<br>
+                <i>IEEE Computer Vision and Pattern Recognition (CVPR) 2023</i><br>
+                <span class="additional">
+              		<a href="./paper/3d_inpainting/index.html">[Project page]</a>
+            	</span>
+            </p>
+                
+            </div>
+        </div>
+        </div>
+
+        <br>
+        <br>
+
 
     	<h3>Teaching</h3> 
         <hr>
@@ -99,6 +135,29 @@
 		         		</a>
 		         	</strong>
 		     	</p>
+
+		        <li>Teaching Assistant, <i><b>University of Southern California</b></i></li>
+		         <p style="font-size:100%">
+		         	<strong>
+		         		<a href="" style="text-decoration:none; color:dimgrey ">
+		         			<u class="dotted">
+		         				Spring 2022 CSCI-576: Multimedia Systems Design
+		         			</u>
+		         		</a>
+		         	</strong>
+		     	</p>
+
+		        <li>Teaching Assistant, <i><b>University of Southern California</b></i></li>
+		         <p style="font-size:100%">
+		         	<strong>
+		         		<a href="" style="text-decoration:none; color:dimgrey ">
+		         			<u class="dotted">
+		         				Fall 2022 CSCI-576: Multimedia Systems Design
+		         			</u>
+		         		</a>
+		         	</strong>
+		     	</p>
+
 	      	</ul>
         </div>
 
