--- a/paper/3d_inpainting/index.html
+++ b/paper/3d_inpainting/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
-  <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+        content="3d inpainting">
+  <meta name="keywords" content="elements">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nerfies: Deformable Neural Radiance Fields</title>
+  <title>Complete 3D Human Reconstruction from a Single Incomplete Image</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -61,7 +61,7 @@
               <a href="https://krsingh.cs.ucdavis.edu/">Krishna Kumar Singh</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://cgit.usc.edu/contact/ulrich-neumann/">Ulrich Neumannn</a><sup>2</sup>,
+              <a href="https://cgit.usc.edu/contact/ulrich-neumann/">Ulrich Neumannn</a><sup>1</sup>,
             </span>
           </div>
 
