--- a/paper/3d_inpainting/index.html
+++ b/paper/3d_inpainting/index.html
@@ -184,34 +184,85 @@
             <source src="./vid/full_test3.mp4"type="video/mp4">
           </video>
 
+          <video id="full4" autoplay controls muted loop playsinline height="100%">
+            <source src="./vid/full_test4.mp4"type="video/mp4">
+          </video>
+
+          <video id="full5" autoplay controls muted loop playsinline height="100%">
+            <source src="./vid/full_test5.mp4"type="video/mp4">
+          </video>
+
         </div>
       </div>
 
       <div class="column">
         <div class="content">
           <h2 class="title is-3" style="text-align:center;">Partial Body Image</h2>
-              <video id="full1" autoplay controls muted loop playsinline height="100%">
+              <video id="part1" autoplay controls muted loop playsinline height="100%">
                 <source src="./vid/partial_test1.mp4"type="video/mp4">
               </video>
 
-              <video id="full3" autoplay controls muted loop playsinline height="100%">
+              <video id="part2" autoplay controls muted loop playsinline height="100%">
                 <source src="./vid/partial_test2.mp4"type="video/mp4">
               </video>
 
-              <video id="full3" autoplay controls muted loop playsinline height="100%">
+              <video id="part3" autoplay controls muted loop playsinline height="100%">
                 <source src="./vid/partial_test3.mp4"type="video/mp4">
               </video>
+
+              <video id="part4" autoplay controls muted loop playsinline height="100%">
+                <source src="./vid/partial_test4.mp4"type="video/mp4">
+              </video>
+
+              <video id="part5" autoplay controls muted loop playsinline height="100%">
+                <source src="./vid/partial_test5.mp4"type="video/mp4">
+              </video>
+
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!--/ Matting. -->
+  </div>
+</section>
 
-    <!-- Animation. -->
-  
-
-
+<br>
+<br>
+<section class="hero is-light is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div class="column">
+        <div class="content">
+          <h3 class="title is-3">Image with Natural Occlusion</h3>
+            <div id="results-carousel" class="carousel results-carousel">
+              <div class="wild1">
+                <video poster="" id="wild1_item" autoplay controls muted loop playsinline height="100%">
+                  <source src="./vid/wild1.mp4"type="video/mp4">
+                </video>
+              </div>
+              <div class="wild2">
+                <video poster="" id="wild2_item" autoplay controls muted loop playsinline height="100%">
+                  <source src="./vid/wild2.mp4"type="video/mp4">
+                </video>
+              </div>
+              <div class="wild3">
+                <video poster="" id="wild3_item" autoplay controls muted loop playsinline height="100%">
+                  <source src="./vid/wild3.mp4"type="video/mp4">
+                </video>
+              </div>
+              <div class="wild4">
+                <video poster="" id="wild4_item" autoplay controls muted loop playsinline height="100%">
+                 <source src="./vid/wild4.mp4"type="video/mp4">
+                </video>
+              </div>
+              <div class="wild5">
+                <video poster="" id="wild5_item" autoplay controls muted loop playsinline height="100%">
+                 <source src="./vid/wild5.mp4"type="video/mp4">
+                </video>
+              </div>
+          </div>
+      </div>
+    </div>
   </div>
 </section>
 
