--- a/paper/3d_inpainting/index.html
+++ b/paper/3d_inpainting/index.html
@@ -192,6 +192,10 @@
             <source src="./vid/full_test5.mp4"type="video/mp4">
           </video>
 
+          <video id="full6" autoplay controls muted loop playsinline height="100%">
+            <source src="./vid/full_test6.mp4"type="video/mp4">
+          </video>
+
         </div>
       </div>
 
@@ -216,6 +220,10 @@
 
               <video id="part5" autoplay controls muted loop playsinline height="100%">
                 <source src="./vid/partial_test5.mp4"type="video/mp4">
+              </video>
+
+              <video id="part6" autoplay controls muted loop playsinline height="100%">
+                <source src="./vid/partial_test6.mp4"type="video/mp4">
               </video>
 
             </div>
