--- a/index.html
+++ b/index.html
@@ -90,10 +90,33 @@
 		
         <div class="paper">
 	        <div class="media">
+            <span class="pull-left"><img src="./paper/depth/teaser.png" width="150px" height="93px"/></span>
+            <div class="media-body">
+                <p><span style="font-weight: bold">Meta-Optimization for Higher Model Generalizability in Single-Image Depth Prediction</span></p>
+                <span class="author-block">
+            	   <a href="https://choyingw.github.io/">Cho-Ying Wu</a>,
+            	</span>
+                <span class="author-block">
+              		<a href="https://scholar.google.com/citations?user=Bv8l8jkAAAAJ&hl=en">Yiqi Zhong</a>,
+              	</span>
+				<strong>Junying Wang</strong>, 
+            	<span class="author-block">
+              		<a href="https://cgit.usc.edu/contact/ulrich-neumann/">Ulrich Neumannn</a>
+            	</span>
+             	<br>
+                <i>IEEE Computer Vision and Pattern Recognition Workshops (CVPRW) 2023</i><br>
+                <span class="additional">
+              		<a href="https://arxiv.org/abs/2305.07269">[Paper]</a>
+            	</span>
+            </p>
+            </div>
+
+            <div class="media">
             <span class="pull-left"><img src="./paper/3d_inpainting/img/teaser.jpg" width="150px" height="93px"/></span>
             <div class="media-body">
+
                 <p><span style="font-weight: bold">Complete 3D Human Reconstruction from a Single Incomplete Image</span></p>
-                <p style="font-size:14px;">Junying Wang, 
+                <p style="font-size:14px;"><strong>Junying Wang</strong>, 
                 <span class="author-block">
               		<a href="https://gorokee.github.io/jsyoon/">Jae Shin Yoon</a>,</span>
             	<span class="author-block">
@@ -108,6 +131,7 @@
              	<br>
                 <i>IEEE Computer Vision and Pattern Recognition (CVPR) 2023</i><br>
                 <span class="additional">
+                    <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wang_Complete_3D_Human_Reconstruction_From_a_Single_Incomplete_Image_CVPR_2023_paper.pdf">[Paper]</a>, 
               		<a href="./paper/3d_inpainting/index.html">[Project page]</a>
             	</span>
             </p>
@@ -157,7 +181,16 @@
 		         		</a>
 		         	</strong>
 		     	</p>
-
+                <li>Teaching Assistant, <i><b>University of Southern California</b></i></li>
+                 <p style="font-size:100%">
+                    <strong>
+                        <a href="" style="text-decoration:none; color:dimgrey ">
+                            <u class="dotted">
+                                Spring 2023 CSCI-576: Multimedia Systems Design
+                            </u>
+                        </a>
+                    </strong>
+                </p>
 	      	</ul>
         </div>
 
