--- a/paper/3d_inpainting/index.html
+++ b/paper/3d_inpainting/index.html
@@ -74,7 +74,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Wang_Complete_3D_Human_Reconstruction_From_a_Single_Incomplete_Image_CVPR_2023_paper.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -82,7 +82,7 @@
                   <span>Paper</span>
                 </a>
               </span>
-              <span class="link-block">
+ <!--              <span class="link-block">
                 <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -90,10 +90,10 @@
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Video Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://www.youtube.com/watch?v=6lMbnZp6vNQ&t=1s"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -108,7 +108,7 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code</span>
+                  <span>Code (Coming soon)</span>
                   </a>
               </span>
             </div>
@@ -278,10 +278,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@inproceedings{wang2023completehuman,
-  title={Complete 3D Human Reconstruction from a Single Incomplete Image},
-  author={Wang, Junying and Yoon, Jae Shin and Wang, Tuanfeng Y. and Singh, Krishna Kumar and Neumann, Ulrich },
-  booktitle={CVPR},
+    <pre><code>@inproceedings{wang2023complete,
+  title={Complete 3D Human Reconstruction From a Single Incomplete Image},
+  author={Wang, Junying and Yoon, Jae Shin and Wang, Tuanfeng Y and Singh, Krishna Kumar and Neumann, Ulrich},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={8748--8758},
   year={2023}
 }
 }</code></pre>
