--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <p style="font-size:100%">
               <strong>
                 <a href="" style="text-decoration:none; color:dimgrey;">
-                  <u class="dotted">Spring 2022 CSCI-576: Multimedia Systems Design</u>
+                  <u class="dotted">Spring and Fall 2022 CSCI-576: Multimedia Systems Design</u>
                 </a>
               </strong>
             </p>
@@ -281,7 +281,7 @@
             <p style="font-size:100%">
               <strong>
                 <a href="" style="text-decoration:none; color:dimgrey;">
-                  <u class="dotted">Fall 2022 CSCI-576: Multimedia Systems Design</u>
+                  <u class="dotted">Spring and Fall 2023 CSCI-576: Multimedia Systems Design</u>
                 </a>
               </strong>
             </p>
@@ -291,7 +291,7 @@
             <p style="font-size:100%">
               <strong>
                 <a href="" style="text-decoration:none; color:dimgrey;">
-                  <u class="dotted">Spring 2023 CSCI-576: Multimedia Systems Design</u>
+                  <u class="dotted">Spring and Fall 2024 CSCI-576: Multimedia Systems Design</u>
                 </a>
               </strong>
             </p>
