--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <i>IEEE Computer Vision and Pattern Recognition (CVPR) 2025</i><br>
               <span class="additional">
                 <a>[Paper]</a>, 
-                <a>[Project page]</a>
+                <a href="./paper/relighting/index.html">[Project page]</a>
               </span>
             </p>
           </div>
