--- a/paper/relighting/index.html
+++ b/paper/relighting/index.html
@@ -61,18 +61,8 @@
             <br>
           <div class="publication-links is-flex is-justify-content-center">
 
-            <!-- arXiv Button -->
-            <a href="" class="external-link button is-dark mx-2">
-              <span class="icon-text">
-                <span class="icon">
-                  <i class="ai ai-arxiv"></i>  <!-- Academicons arXiv icon -->
-                </span>
-                <span>arXiv</span>
-              </span>
-            </a>
-
             <!-- PDF Button -->
-            <a href="" class="external-link button is-dark mx-2">
+            <a href="https://arxiv.org/abs/2504.03011" class="external-link button is-dark mx-2" target="_blank">
               <span class="icon-text">
                 <span class="icon">
                   <i class="fas fa-file-pdf"></i>
@@ -80,7 +70,7 @@
                 <span>Paper</span>
               </span>
             </a>
-            
+
             <!-- Supplementary Button -->
             <a href="" class="external-link button is-dark mx-2">
               <span class="icon-text">
