--- a/paper/relighting/index.html
+++ b/paper/relighting/index.html
@@ -541,6 +541,21 @@ document.addEventListener('DOMContentLoaded', function() {
 </style>
 
 
+<section class="section">
+  <div class="container is-max-desktop">
+    <h2 class="title">BibTeX</h2>
+    <pre><code>
+@inproceedings{wang2025comprehensive,
+  title={Comprehensive Relighting: Generalizable and Consistent Monocular Human Relighting and Harmonization},
+  author={Wang, Junying and Liu, Jingyuan and Sun, Xin and Singh, Krishna Kumar and Shu, Zhixin and Zhang, He and Yang, Jimei and Zhao, Nanxuan and Wang, Tuanfeng Y and Chen, Simon S and others},
+  booktitle={Proceedings of the Computer Vision and Pattern Recognition Conference},
+  pages={380--390},
+  year={2025}
+}
+    </code></pre>
+  </div>
+</section>
+
 
 <!--   <section class="section">
     <div class="container is-max-desktop">
