--- a/paper/relighting/index.html
+++ b/paper/relighting/index.html
@@ -72,7 +72,7 @@
             </a>
 
             <!-- Supplementary Button -->
-            <a href="" class="external-link button is-dark mx-2">
+            <a href="img/cvpr2025_comprehensive_relighting_supplementary_material.pdf" class="external-link button is-dark mx-2">
               <span class="icon-text">
                 <span class="icon">
                   <i class="fas fa-file-alt"></i>
@@ -80,9 +80,9 @@
                 <span>Supplementary</span>
               </span>
             </a>
-            
+
             <!-- Video Button -->
-            <a href="" class="external-link button is-dark mx-2">
+            <a href="video/comprehensive_relighting_demo_video.mp4" class="external-link button is-dark mx-2" target="_blank">
               <span class="icon-text">
                 <span class="icon">
                   <i class="fas fa-video"></i>
@@ -90,6 +90,17 @@
                 <span>Video</span>
               </span>
             </a>
+
+            <!-- Poster Button -->
+            <a href="img/cvpr2025_comprehensive_relighting_poster.pdf" class="external-link button is-dark mx-2" target="_blank">
+              <span class="icon-text">
+                <span class="icon">
+                  <i class="fas fa-image"></i>
+                </span>
+                <span>Poster</span>
+              </span>
+            </a>
+            
           </div>
           </div>
         </div>
