--- a/paper/relighting/index.html
+++ b/paper/relighting/index.html
@@ -36,7 +36,15 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Comprehensive Relighting:<br>Generalizable and Consistent Monocular Human Relighting and Harmonization</h1>
+            <h1 class="title is-1 publication-title">
+              Comprehensive Relighting:<br>
+              Generalizable and Consistent Monocular Human Relighting and Harmonization
+            </h1>
+
+            <h2 class="title is-3 publication-title" style="color: #008bf5">
+              CVPR 2025
+            </h2>
+
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://junyingw.github.io/">Junying Wang</a><sup>1</sup>,
@@ -100,7 +108,7 @@
                 <span>Poster</span>
               </span>
             </a>
-            
+
           </div>
           </div>
         </div>
