--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h3>About</h3>
           <hr>
           <p>
-            Hey, this is Junying Wang (王君瑛). I am currently a fourth-year Ph.D. candidate at 
+            Hey, this is Junying Wang (王君瑛). I am currently a Ph.D. candidate at 
             <strong><a href="https://cgit.usc.edu/" style="text-decoration:none; color:dimgrey;">
               <u class="dotted">CGIT</u></a></strong> lab in the 
             <strong><a href="https://www.cs.usc.edu/" style="text-decoration:none; color:dimgrey;">
@@ -70,7 +70,16 @@
             <strong><a href="https://www.usc.edu/" style="text-decoration:none; color:dimgrey;">
               <u class="dotted">University of Southern California</u></a></strong>, advised by 
             <strong><a href="https://cgit.usc.edu/contact/ulrich-neumann/" style="text-decoration:none; color:dimgrey;">
-              <u class="dotted">Prof. Ulrich Neumann</u></a></strong>.<br>
+              <u class="dotted">Prof. Ulrich Neumann</u></a></strong> and <strong><a href="https://yuewang.xyz/" style="text-decoration:none; color:dimgrey;"><u class="dotted">Prof. Yue Wang</u></a></strong>.<br>
+            Before that, I got my bachelor’s degree from 
+            <strong><a href="http://eweb.ouc.edu.cn/" style="text-decoration:none; color:dimgrey;">
+              <u class="dotted">Ocean University of China</u></a></strong>. When I studied at USC, I was glad to work in 
+            <strong><a href="http://vgl.ict.usc.edu/" style="text-decoration:none; color:dimgrey;">
+              <u class="dotted">Vision and Graphics Lab</u></a></strong> of USC ICT, advised by 
+            <strong><a href="https://www.hao-li.com/Hao_Li/Hao_Li_-_about_me.html" style="text-decoration:none; color:dimgrey;">
+              <u class="dotted">Prof. Hao Li</u></a></strong>.<br>
+            If you want to know more about me, check my 
+            <strong><a href="" style="color:dimgrey;"><u class="dotted">CV</u></a></strong> here.
           </p>
         </div>
       </div> <!-- /row -->
@@ -136,12 +145,12 @@
       <div class="paper">
         <!-- Publication 1 -->
         <div class="media">
-			<span class="pull-left">
-				<video style="width:200px; height:115px; object-fit:fill;"
-				       autoplay loop muted playsinline>
-			    <source src="./paper/relighting/video/teaser_multi.mp4" type="video/mp4">
-			  </video>
-			</span>
+      <span class="pull-left">
+        <video style="width:200px; height:115px; object-fit:fill;"
+               autoplay loop muted playsinline>
+          <source src="./paper/relighting/video/teaser_multi.mp4" type="video/mp4">
+        </video>
+      </span>
           <div class="media-body">
             <p>
               <strong>Comprehensive Relighting: Generalizable and Consistent Monocular Human Relighting and Harmonization</strong>
