--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             <strong><a href="https://www.usc.edu/" style="text-decoration:none; color:dimgrey;">
               <u class="dotted">University of Southern California</u></a></strong>, advised by 
             <strong><a href="https://cgit.usc.edu/contact/ulrich-neumann/" style="text-decoration:none; color:dimgrey;">
-              <u class="dotted">Prof. Ulrich Neumann</u></a></strong> and <strong><a href="https://yuewang.xyz/" style="text-decoration:none; color:dimgrey;"><u class="dotted">Prof. Yue Wang</u></a></strong>.<br>
+              <u class="dotted">Prof. Ulrich Neumann</u></a></strong>
+              and <strong><a href="https://yuewang.xyz/" style="text-decoration:none; color:dimgrey;"><u class="dotted">Prof. Yue Wang</u></a></strong>.<br>
             Before that, I got my bachelor’s degree from 
             <strong><a href="http://eweb.ouc.edu.cn/" style="text-decoration:none; color:dimgrey;">
               <u class="dotted">Ocean University of China</u></a></strong>. When I studied at USC, I was glad to work in 
@@ -171,7 +172,7 @@
               <a href="https://gorokee.github.io/jsyoon/">Jae Shin Yoon</a><br>
               <i>IEEE Computer Vision and Pattern Recognition (CVPR) 2025</i><br>
               <span class="additional">
-                <a>[Paper]</a>, 
+                <a href="https://arxiv.org/abs/2504.03011">[Paper]</a>, 
                 <a href="./paper/relighting/index.html">[Project page]</a>
               </span>
             </p>
