--- a/paper/dgh/index.html
+++ b/paper/dgh/index.html
@@ -59,7 +59,7 @@
               <br>
               <div class="is-size-5 publication-authors">
                 <span class="author-block"><sup>1</sup>University of Southern California,</span>
-                <span class="author-block"><sup>2</sup>Meta Inc.</span>
+                <span class="author-block"><sup>2</sup>Meta Reality Labs Research</span>
               </div>
             </div>
             <br>
