--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <u class="dotted">University of Southern California</u></a></strong>, advised by 
             <strong><a href="https://cgit.usc.edu/contact/ulrich-neumann/" style="text-decoration:none; color:dimgrey;">
               <u class="dotted">Prof. Ulrich Neumann</u></a></strong>
-              and <strong><a href="https://yuewang.xyz/" style="text-decoration:none; color:dimgrey;"><u class="dotted">Prof. Yue Wang</u></a></strong>.<br>
+            and <strong><a href="https://yuewang.xyz/" style="text-decoration:none; color:dimgrey;"><u class="dotted">Prof. Yue Wang</u></a></strong>.<br>
             Before that, I got my bachelor’s degree from 
             <strong><a href="http://eweb.ouc.edu.cn/" style="text-decoration:none; color:dimgrey;">
               <u class="dotted">Ocean University of China</u></a></strong>. When I studied at USC, I was glad to work in 
@@ -144,20 +144,52 @@
       <hr>
 
       <div class="paper">
+
+        <!-- DGH Publication -->
+        <div class="media">
+          <span class="pull-left">
+            <video style="width:200px; height:115px; object-fit:fill;" autoplay loop muted playsinline>
+              <source src="./paper/dgh/video/dgh.mp4" type="video/mp4">
+            </video>
+          </span>
+          <div class="media-body">
+            <p>
+              <strong>DGH: Dynamic Gaussian Hair</strong>
+            </p>
+            <p style="font-size:14px;">
+              <span class="author-block">
+                <strong><u>Junying Wang</u></strong>,
+                <a href="https://scholar.google.com/citations?user=fvr-J3sAAAAJ&hl=en&oi=ao">Yuanlu Xu</a>,
+                <a href="https://edithtretschk.github.io/">Edith Tretschk</a>,
+                <a href="https://ziyanw1.github.io/">Ziyan Wang</a>,
+                <a href="https://scholar.google.com/citations?user=WR4yx9wAAAAJ&hl=ru">Anastasia Ianina</a>,
+                <a href="https://aljazbozic.github.io/">Aljaz Bozic</a>,
+                <a href="https://cgit.usc.edu/contact/ulrich-neumann/">Ulrich Neumann</a>,
+                <a href="https://sites.google.com/site/tony2ng/">Tony Tung</a>
+              </span>
+              <br>
+              <i>Conference on Neural Information Processing Systems (NeurIPS) 2025</i><br>
+              <span class="additional">
+                <a href="">[Paper]</a>, 
+                <a href="./paper/dgh/index.html">[Project page]</a>
+              </span>
+            </p>
+          </div>
+        </div>
+
         <!-- Publication 1 -->
         <div class="media">
-      <span class="pull-left">
-        <video style="width:200px; height:115px; object-fit:fill;"
-               autoplay loop muted playsinline>
-          <source src="./paper/relighting/video/teaser_multi.mp4" type="video/mp4">
-        </video>
-      </span>
+          <span class="pull-left">
+            <video style="width:200px; height:115px; object-fit:fill;" autoplay loop muted playsinline>
+              <source src="./paper/relighting/video/teaser_multi.mp4" type="video/mp4">
+            </video>
+          </span>
           <div class="media-body">
             <p>
               <strong>Comprehensive Relighting: Generalizable and Consistent Monocular Human Relighting and Harmonization</strong>
             </p>
             <p style="font-size:14px;">
-              <strong>Junying Wang</strong>,
+              <strong><u>Junying Wang</u></strong>,
               <a href="https://fdjingyuan.github.io/">Jingyuan Liu</a>,
               <a href="https://www.sunxin.name/">Xin Sun</a>,
               <a href="https://krsingh.cs.ucdavis.edu/">Krishna Kumar Singh</a>,
@@ -191,7 +223,7 @@
             <p style="font-size:14px;">
               <a href="https://choyingw.github.io/">Cho-Ying Wu</a>,
               <a href="https://scholar.google.com/citations?user=Bv8l8jkAAAAJ&hl=en">Yiqi Zhong</a>,
-              <strong>Junying Wang</strong>,
+              <strong><u>Junying Wang</u></strong>,
               <a href="https://cgit.usc.edu/contact/ulrich-neumann/">Ulrich Neumann</a><br>
               <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2024</i><br>
               <span class="additional">
@@ -212,7 +244,7 @@
               <strong>Complete 3D Human Reconstruction from a Single Incomplete Image</strong>
             </p>
             <p style="font-size:14px;">
-              <strong>Junying Wang</strong>,
+              <strong><u>Junying Wang</u></strong>,
               <a href="https://gorokee.github.io/jsyoon/">Jae Shin Yoon</a>,
               <a href="https://tuanfeng.github.io/">Tuanfeng Y. Wang</a>,
               <a href="https://krsingh.cs.ucdavis.edu/">Krishna Kumar Singh</a>,
@@ -240,7 +272,7 @@
             <p style="font-size:14px;">
               <a href="https://choyingw.github.io/">Cho-Ying Wu</a>,
               <a href="https://scholar.google.com/citations?user=Bv8l8jkAAAAJ&hl=en">Yiqi Zhong</a>,
-              <strong>Junying Wang</strong>,
+              <strong><u>Junying Wang</u></strong>,
               <a href="https://cgit.usc.edu/contact/ulrich-neumann/">Ulrich Neumann</a><br>
               <i>IEEE Computer Vision and Pattern Recognition Workshops (CVPRW) 2023</i><br>
               <span class="additional">
@@ -293,6 +325,16 @@
               <strong>
                 <a href="" style="text-decoration:none; color:dimgrey;">
                   <u class="dotted">Spring and Fall 2024 CSCI-576: Multimedia Systems Design</u>
+                </a>
+              </strong>
+            </p>
+          </li>
+          <li>
+            Teaching Assistant, <i><b>University of Southern California</b></i>
+            <p style="font-size:100%">
+              <strong>
+                <a href="" style="text-decoration:none; color:dimgrey;">
+                  <u class="dotted">Spring and Fall 2025 CSCI-576: Multimedia Systems Design</u>
                 </a>
               </strong>
             </p>
