--- a/paper/dgh/index.html
+++ b/paper/dgh/index.html
@@ -75,14 +75,14 @@
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://junyingw.github.io/">Junying Wang</a><sup>1,2</sup>,
-                <a href="">Yuanlu Xu</a><sup>2</sup>,
-                <a href="">Edith Tretschk</a><sup>2</sup>,
-                <a href="">Ziyan Wang</a><sup>2</sup>,
-                <a href="">Anastasia Ianina</a><sup>2</sup>,
-                <a href="">Aljaz Bozic</a><sup>2</sup>,
+                <a href="https://scholar.google.com/citations?user=fvr-J3sAAAAJ&hl=en&oi=ao">Yuanlu Xu</a><sup>2</sup>,
+                <a href="https://edithtretschk.github.io/">Edith Tretschk</a><sup>2</sup>,
+                <a href="https://ziyanw1.github.io/">Ziyan Wang</a><sup>2</sup>,
+                <a href="https://scholar.google.com/citations?user=WR4yx9wAAAAJ&hl=ru">Anastasia Ianina</a><sup>2</sup>,
+                <a href="https://aljazbozic.github.io/">Aljaz Bozic</a><sup>2</sup>,
                 <br>
-                <a href="">Ulrich Neumann</a><sup>1</sup>,
-                <a href="">Tony Tung</a><sup>2</sup>
+                <a href="https://cgit.usc.edu/contact/ulrich-neumann/">Ulrich Neumann</a><sup>1</sup>,
+                <a href="https://sites.google.com/site/tony2ng/">Tony Tung</a><sup>2</sup>
               </span>
               <br>
               <div class="is-size-5 publication-authors">
@@ -117,7 +117,7 @@
               </a>
 
               <!-- Video Button (placeholder) -->
-              <a href="#" class="external-link button is-dark mx-2" target="_blank" aria-label="Video link placeholder">
+              <a href="https://www.youtube.com/embed/oh83I5pz6a0?start=1" class="external-link button is-dark mx-2" target="_blank" aria-label="Video link placeholder">
                 <span class="icon-text">
                   <span class="icon">
                     <i class="fas fa-video"></i>
@@ -126,8 +126,11 @@
                 </span>
               </a>
 
-              <!-- Poster Button (placeholder) -->
-              <a href="#" class="external-link button is-dark mx-2" target="_blank" aria-label="Poster link placeholder">
+              <!-- Poster Button -->
+              <a href="./img/neurips_dgh_poster.pdf"
+                class="external-link button is-dark mx-2"
+                target="_blank"
+                aria-label="Download poster PDF">
                 <span class="icon-text">
                   <span class="icon">
                     <i class="fas fa-image"></i>
