--- a/paper/dgh/index.html
+++ b/paper/dgh/index.html
@@ -97,7 +97,7 @@
             <div class="publication-links is-flex is-justify-content-center">
 
               <!-- PDF Button (placeholder) -->
-              <a href="#" class="external-link button is-dark mx-2" target="_blank" aria-label="Paper link placeholder">
+              <a href="https://openreview.net/pdf?id=LUvu0H3uIG" class="external-link button is-dark mx-2" target="_blank" aria-label="Paper link placeholder">
                 <span class="icon-text">
                   <span class="icon">
                     <i class="fas fa-file-pdf"></i>
