--- a/paper/dgh/index.html
+++ b/paper/dgh/index.html
@@ -299,24 +299,23 @@
 
 
 
-  <!-- BibTeX Reference (end of page)
-  <section class="section">
-    <div class="container is-max-desktop">
-      <h2 class="title is-3 has-text-centered">BibTeX</h2>
-      <div class="content" style="max-width: 900px; margin: 0 auto;">
-        <p class="has-text-centered">
-          If you find our work useful, please cite:
-        </p>
-        <pre><code>@inproceedings{wang2025dgh,
-  title     = {Dynamic Gaussian Hair: Learning Photorealistic, Animatable Hair with 3D Gaussian Splatting},
+<!-- BibTeX Reference -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3 has-text-centered">BibTeX</h2>
+    <div class="content" style="max-width: 900px; margin: 0 auto;">
+      <pre><code>@inproceedings{wang2025dgh,
+  title     = {DGH: Dynamic Gaussian Hair},
   author    = {Wang, Junying and Xu, Yuanlu and Tretschk, Edith and Wang, Ziyan
                and Ianina, Anastasia and Bozic, Aljaz and Neumann, Ulrich and Tung, Tony},
-  booktitle = {Advances in Neural Information Processing Systems},
+  booktitle = {The Thirty-Ninth Annual Conference on Neural Information Processing Systems (NeurIPS)},
   year      = {2025}
 }</code></pre>
-      </div>
     </div>
-  </section> -->
+  </div>
+</section>
+
+
 
   <!-- Simple JS to switch videos for each carousel (harmless if containers don't exist yet) -->
   <script>
